Fix page width on mobile

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -17,3 +17,8 @@ html {
 body {
   @include container;
 }
+
+header, main {
+  max-width: 90vw;
+  margin: auto;
+}
